overflow fix 5

--- a/css/index.css
+++ b/css/index.css
@@ -295,11 +295,16 @@ body {
 		transform: translate(21vw);
 	}	
 	.contactus button{
-		font-size: 2em;
+		font-size: 1.8em;
 		border-radius: 50%;
 		border:none;
 		width: 15vw;
 	}
+
+	.sponser button{
+		font-size: 1.8em;
+	}
+
 	.sponser{
 		margin-top: 2vh;
 		z-index: 55;
